Building Models/Database

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,32 +1,31 @@
 {% extends 'main.html' %} {% block content %}
 
-<p>Hello, you are on the {{page}} page</p>
-
-{% if number > 10 %}
-<p>Number is greater than 10</p>
-{% elif number == 10 %}
-<p>Number is exactly 10</p>
-{% else %}
-<p>Number is less than 10</p>
-{% endif %}
-
-<hr />
-
 <h1>Projects</h1>
 
-<u1>
+<table>
+  <tr>
+    <th>ID</th>
+    <th>Project</th>
+    <th>Positive Votes</th>
+    <th>Votes</th>
+    <th></th>
+  </tr>
   {% for project in projects %}
-  <!-- two ways of doing the same thing -->
-  <!-- <li>
+  <tr>
+    <td>{{project.id}}</td>
+    <td>{{project.title}}</td>
+    <td>{{project.vote_ratio}}%</td>
+    <td>{{project.vote_total}}</td>
+    <td>{{project.created}}</td>
+    <td><a href="{% url 'project' project.id %}">View</a></td>
+  </tr>
+  {% endfor %}
+</table>
+
+{% endblock content %}
+
+<!-- another way of doing the same thing as <a href="{% url 'project' project.id %}">-->
+<!-- <li>
     Title: <a href="/project/{{project.id}}"> {{project.title}}</a> ---
     {{project.description}}
   </li> -->
-  <li>
-    Title: <a href="{% url 'project' project.id %}">{{project.title}}</a> ---
-    {{project.description}}
-  </li>
-
-  {% endfor %}
-</u1>
-
-{% endblock content %}
