users app and user template created

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
 <body>
   {% include 'navbar.html' %}
   {% block content %}
-  {% endblock content %}
+  {% endblock %}
   <p>FOOTER</p>
 </body>
 
