--- a/templates/main.html
+++ b/templates/main.html
@@ -17,11 +17,22 @@
   <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
 
   <title>DevSearch - Connect with Developers!</title>
+
 </head>
 
 <body>
   {% include 'navbar.html' %}
+
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+    <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+
   {% block content %}
+
   {% endblock %}
   <p>FOOTER</p>
 </body>
