--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -34,6 +34,12 @@
               <img class="project__thumbnail" src="{{ project.featured_image.url}}" alt="project thumbnail" />
               <div class="card__body">
                 <h3 class="project__title">{{project.title}}</h3>
+                <script>
+                  project = '{{ project.owner }}'
+                  console.log({
+                    project
+                  })
+                </script>
                 <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By
                     {{project.owner.name}}</a>
                 </p>
