--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,12 +1,96 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
 
-<form action="{% url 'login' %}" method="Post">
-    {% csrf_token  %}
-    <input type="text" name="username" placeholder="Username" />
-    <input type="password" name="password" placeholder="Enter password" />
-    <input type="submit" value="Login" />
+{% if page == 'register' %}
+<!--<h1>Register User</h1>
+
+ <form action="{% url 'register' %}" method="POST">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Register User" />
+
 </form>
 
+<p>Already have an account <a href="{% url 'login' %}">Login</a></p>
+ -->
+<div class="auth">
+    <div class="card">
+        <div class="auth__header text-center">
+            <a href="/">
+                <img src="{% static 'images/icon.svg' %}" alt="icon" />
+            </a>
+            <h3>Register an Account</h3>
+            <p>Create a new developer account</p>
+        </div>
+
+        <form action="{% url 'register' %}" method="POST">
+            {% csrf_token %}
+
+            {% for field in form %}
+            <div class="form__field">
+                <label for="formInput#text">{{field.label}} </label>
+                {{field}}
+
+                <!--  {% if field.help_text %}
+                <small>{{field.help_text}}</small>
+                {% endif %} -->
+
+                {% for error in field.errors %}
+                <p style="color: red;">{{error}}</p>
+                {% endfor %}
+            </div>
+            {% endfor %}
+
+            <div class="auth__actions">
+                <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+            </div>
+        </form>
+        <div class="auth__alternative">
+            <p>Already have an Account?</p>
+            <a href="{% url 'login' %}">Log In</a>
+        </div>
+    </div>
+</div>
+{% else %}
+
+<div class="auth">
+    <div class="card">
+        <div class="auth__header text-center">
+            <a href="/">
+                <img src="{% static 'images/icon.svg' %}" alt="icon" />
+            </a>
+            <h3>Account Login</h3>
+            <p>Hello Developer, Welcome Back!</p>
+        </div>
+
+        <form action="{% url 'login' %}" method="Post">
+            {% csrf_token  %}
+            <!-- Input:Username -->
+            <div class="form__field">
+                <label for="formInput#text">Username: </label>
+                <input class="input input--text" id="formInput#text" type="text" name="username"
+                    placeholder="Enter your username..." />
+            </div>
+
+            <!-- Input:Password -->
+            <div class="form__field">
+                <label for="formInput#password">Password: </label>
+                <input class="input input--password" id="formInput#passowrd" type="password" name="password"
+                    placeholder="••••••••" />
+            </div>
+            <div class="auth__actions">
+                <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+                <a href="">Forget Password?</a>
+            </div>
+        </form>
+        <div class="auth__alternative">
+            <p>Don’t have an Account?</p>
+            <a href="{% url 'register' %}">Sign Up</a>
+        </div>
+    </div>
+</div>
+
+
+{% endif %}
 {% endblock %}
