--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -35,10 +35,10 @@
               <div class="card__body">
                 <h3 class="project__title">{{project.title}}</h3>
                 <script>
-                  project = '{{ project.owner }}'
-                  console.log({
-                    project
-                  })
+                  //project = '{{ project.owner.id }}'
+                  ///   console.log({
+                  //     project
+                  //   })
                 </script>
                 <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By
                     {{project.owner.name}}</a>
