--- a/users/templates/users/skill_form.html
+++ b/users/templates/users/skill_form.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'main.html'%}
 
 {% block content %}
 
@@ -9,8 +9,7 @@
             <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
             <br>
 
-            <form class="form" method="POST" enctype="multipart/form-data">
-
+            <form class="form" action="" method="POST">
                 {% csrf_token %}
 
                 {% for field in form %}
@@ -20,6 +19,8 @@
                     {{field}}
                 </div>
                 {% endfor %}
+
+
                 <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
             </form>
         </div>
