paginate Projects and Profiles page

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -64,6 +64,8 @@
     </div>
   </section>
 
+  {% include 'pagination.html' with queryset=projects custom_range=custom_range  %}
+
 </main>
 
 {% endblock content %}
