--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -59,6 +59,9 @@
         </div>
     </section>
 
+
+    {% include 'pagination.html' with queryset=profiles custom_range=custom_range  %}
+
 </main>
 
 {% endblock %}
