review projects implemented
	modified:   projects/forms.py
	new file:   projects/migrations/0006_auto_20210923_1700.py
	modified:   projects/models.py
	modified:   projects/templates/projects/single-project.html
	modified:   projects/views.py
	modified:   users/templates/users/login_register.html
	modified:   users/views.py

--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -64,7 +64,7 @@
             <p>Hello Developer, Welcome Back!</p>
         </div>
 
-        <form action="{% url 'login' %}" method="Post">
+        <form action="" method="Post">
             {% csrf_token  %}
             <!-- Input:Username -->
             <div class="form__field">
